Fix squished image

--- a/_sass/_layout-home.scss
+++ b/_sass/_layout-home.scss
@@ -53,6 +53,7 @@
     }
 }
 
+
 @media only screen and (min-width: $break2) {
     .layout-home {
 
@@ -71,8 +72,8 @@
 
             img {
                 max-width: 50%;
+                height: auto;
             }
-
         }
 
         .events {
